# Project72-

Project72-master1/: Opaque_Skiash.xlsx  README.md  Transp_Skiash.xlsx  excel2py.json  jspars.py  kenak.xml  launcher_script.py  main.py  out.json  output.xml  pyproject.toml  sample_input.json  zone1.xlsm  zone2.xlsm  ~$calc.xlsm
Project72-master1/project72/: __init__.py  environment.py  exporters.py  parsers.py
Project72-master1/project72/templates/: kenak.xml - Copy.j2  kenak.xml.j2  kenak.xml.test.j2
